# grid nerds: replace sprite img; extract shop basket from nav; set background as icon for social and shop basket; stretch map to 100%; set gallery items, hiden description as inline-block; correctly link google fonts;

--- a/css/style.css
+++ b/css/style.css
@@ -96,16 +96,16 @@ h4 {
 
 .header-logo {
   width: 140px;
-  padding-top: 17px;
+  padding-top: 55px;
   padding-right: 10px;
 }
 
+.col {
+  padding-top: 81px;
+}
 .main-navigation {
-  position: absolute;
-  top: 50px;
-
-  width: 560px;
-  margin-left: 320px;
+  width: 400px;
+  margin-left: 171px;
 }
 
 .main-navigation ul {
@@ -114,11 +114,12 @@ h4 {
 
 .main-navigation li {
   display: inline-block;
+  padding: 0;
+  padding-right: 40px;
 }
 
-.main-navigation a {
-  padding: 0 10px;
-
+.main-navigation a,
+.shop-basket-navigation a {
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
@@ -126,6 +127,24 @@ h4 {
   text-transform: uppercase;
   text-decoration: none;
 }
+
+.main-navigation li:last-child {
+  padding-right: 0;
+}
+
+.shop-basket-navigation {
+  width: 130px;
+}
+
+.basket-icon {
+  margin-left: 35px;
+  padding-left: 28px;
+
+  background-image: url("../img/sprites.png");
+  background-repeat: no-repeat;
+  background-position: -4px 2px;
+}
+
 
 .slider-container {
   height: 320px;
@@ -290,8 +309,18 @@ h4 {
 .map-container {
   position: relative;
 
-  width: 1280px;
-  margin: 0 auto;
+  width: 100%;
+}
+
+.map-layer {
+  z-index: 100;
+
+  vertical-align: top;
+}
+
+.container-contacts .container {
+  position: relative;
+  z-index: 90;
 }
 
 .contacts {
@@ -312,7 +341,11 @@ h4 {
   color: #666666;
 
   background-color: #ffffff;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-120%);
+     -moz-transform: translateY(-120%);
+      -ms-transform: translateY(-120%);
+       -o-transform: translateY(-120%);
+          transform: translateY(-120%);
 }
 
 .contacts-title {
@@ -349,45 +382,49 @@ h4 {
 .contacts-map-bubble {
   position: absolute;
   top: 50%;
+  left: 64%;
   left: 830px;
 
-  transform: translateY(-50%);
-  /* [DL] это свойство используется не всеми браузерами, используй преффиксы http://caniuse.com/#search=transform */
+  -webkit-transform: translateY(-150%);
+     -moz-transform: translateY(-150%);
+      -ms-transform: translateY(-150%);
+       -o-transform: translateY(-150%);
+          transform: translateY(-150%);
 }
 
-.main-footer {
-  background-color: #0088cc; /* [RB] залил другим цветом чтобы показать что есть 5 px зазора перед футером, не пойму откуда */
-}
+
+
 .footer-social {
-  width: 300px;
+  width: 270px;
   margin: 0 auto;
+  padding-top: 79px;
+  padding-right: 36px;
 }
 
-.social-btn
-{
+.social-btn {
   display: inline-block;
   width: 62px;
   height: 62px;
-  margin-right: 10px;
+  margin-right: 25px;
 
   vertical-align: middle;
 
-  background-image: url("/img/sprites.png"); /* [RB] Спрайт не отображается :( */
   background-color: #e1e1e1;
+  background-image: url("../img/sprites.png");
   background-repeat: no-repeat;
   border-radius: 50%;
 }
 
 .social-btn-vk {
-  background-position: -43px -6px ;
+  background-position: 18px -24px;
 }
 
 .social-btn-fb {
-  background-position: -102px 0;
+  background-position: 19px -76px;
 }
 
 .social-btn-inst {
-  background-position: -146px 0;
+  background-position: 18px -126px;
 }
 
 /* END index page*/
@@ -395,14 +432,13 @@ h4 {
 /* START catalog page*/
 .container-page-title {
   margin-bottom: 70px;
+  padding-top: 52px;
+  padding-bottom: 78px;
 
   background-color: #eeeeee;
 }
 
 .main-header-title {
-  padding-top: 30px;
-  padding-bottom: 100px; /* [DL] Плохая практика задавать такие большие отступы заголовкам. Задай контейнеру. */
-
   font-weight: 400;
   font-size: 40px;
   text-align: center;
@@ -464,16 +500,20 @@ h4 {
 
 .catalog-gallery {
   margin-bottom: 20px;
+
   font-size: 0;
 }
 
 .catalog-gallery-item {
-  display: inline-block; /*[DL] Всем инлайн блокам задай вертикальное выравнивание*/
+  display: inline-block;
   width: 240px;
   min-height: 270px;
   margin-right: 80px;
   margin-bottom: 60px;
+
+  vertical-align: top;
 }
+
 .catalog-gallery-item:nth-child(2n) {
   margin-right: 0;
 }
@@ -495,7 +535,10 @@ h4 {
   position: relative;
 
   margin: 0 auto;
+
+  text-align: center;
 }
+
 .item-price-title {
   display: block;
   width: 70px;
@@ -524,9 +567,8 @@ h4 {
 }
 
 .price {
-  display: block;
+  display: inline-block;
   width: 140px;
-  margin: 0 auto;
   padding-bottom: 18px;
 
   font-weight: 400;
@@ -540,12 +582,12 @@ h4 {
 .price .btn {
   padding: 14px 33px;
 }
+
 /* END item-price*/
 
 .pages {
   margin: auto;
   margin-left: 5px;
-  padding: 0; /* [DL] это свойство лишнее. ;)*/
 
   list-style: none;
 }
@@ -571,4 +613,5 @@ h4 {
 .page.next {
   padding: 15px 30px;
 }
+
 /* END catalog page*/
